--- a/style.css
+++ b/style.css
@@ -347,6 +347,13 @@ td, th {
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Courgette-Regular';
+    src: url('fonts/Courgette-Regular.eot?#iefix') format('embedded-opentype'), url('fonts/Courgette-Regular.woff') format('woff'), url('fonts/Courgette-Regular.ttf') format('truetype'), url('fonts/Courgette-Regular.svg#Courgette-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body, button, input, select, textarea {
     color: #1a1a1a;
     font-family: 'fira_sansregular', Arial, sans-serif;
@@ -2075,8 +2082,12 @@ embed, iframe, object {
     box-shadow: none;
     margin: 0;
     width: 100%;
-    height: 21.429rem;
-    border: 1px solid green;
+    height: 480px;
+    /* border: 1px solid green; */
+}
+
+.flexslider #flex-index, .flexslider .flex-direction-nav {
+    /* display: none; */
 }
 
 .flexslider .slides li {
@@ -2086,61 +2097,88 @@ embed, iframe, object {
 
 .flexslider .slides img {
     width: 100%;
-    height: 21.429rem;
+    height: 480px;
     object-fit: cover;
 }
 
 .flexslider .container {
     position: absolute;
     text-align: center;
-    top: 0;
-    right: 0;
-    left: 0;
-    /* width: 100%; */
-    z-index: 100;
-    color: #fff;
-    padding: 0 1.25em;
+    width: 100%;
     height: 100%;
+    top: 5em;
+    z-index: 100;
+    color: #111;
+    padding: 0 1.25em;
     overflow: scroll;
-    border: 1px solid red;
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    /* right: 0; */
+    /* width: 100%; */
+    /* border: 1px solid red; */
+}
+
+.flexslider .container .inner-wrapper {
+    background-image: url('imgs/home-slider-metal.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 1em 1.25em;
+    max-width: 350px;
+    height: 320px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .flexslider .container h1 {
-    /* font-size: 1em; */
+    color: #111;
+    text-shadow: none;
+    line-height: 1;
+    font-size: 1.5em;
 }
 
 .flexslider .container p {
-    /* font-size: .5em;
-    line-height: 1;
-    padding: 0 10px; */
+    font-size: .8em;
+    line-height: 1.3;
+    margin: .5em 0 1em;
 }
 
 .flexslider .container .slider-testimonial, .flexslider .container .slider-testimonial-name {
     display: block;
-    color: #fff;
-    font-size: .6em;
+    color: #111;
+    line-height: 1.3;
+}
+
+.flexslider .container .slider-testimonial {
+    font-family: 'Courgette-Regular';
+    margin-top: 1em;
+    font-size: .8em;
+}
+
+.flexslider .container .slider-testimonial-name {
+    margin-top: .5em;
+    font-size: .7em;
 }
 
 .flex-direction-nav a {
     top: 84%;
     transition: none;
-    width: 40px;
+    width: 30px;
 }
 
 .flex-direction-nav a:before {
     content: ' ';
     display: block;
-    font-size: 33px;
+    font-size: 25px;
 }
 
 .flex-direction-nav a.flex-prev:before {
     content: url('imgs/icon-flex-nav-prev.svg');
-    width: 40px;
+    width: 30px;
 }
 
 .flex-direction-nav a.flex-next:before {
     content: url('imgs/icon-flex-nav-next.svg');
-    width: 40px;
+    width: 30px;
 }
 
 .flexslider .flex-prev, .flexslider .flex-next {
@@ -2153,41 +2191,71 @@ embed, iframe, object {
 .flex-direction-nav .flex-next {
     right: 10px;
     text-align: left;
+    top: 96%;
 }
 
 .flex-direction-nav .flex-prev {
     right: 10px;
-    top: 60%;
+    top: 88%;
 }
 
 .flexslider #flex-index {
-    bottom: 0;
+    /* bottom: 86px; */
+    bottom: 2px;
     color: rgba(255, 255, 255, 0.5);
-    font-size: 21px;
+    font-size: 16px;
     position: absolute;
-    right: 26px;
+    right: 24px;
     z-index: 50000;
 }
 
-@media screen and ( min-width: 360px) {
+@media screen and ( min-width: 500px) {
+    .flexslider {
+        height: 400px;
+    }
+    .flexslider slides img {
+        height: 400px;
+    }
+    .flexslider .container {
+        top: 3em;
+    }
+    .flexslider .container .inner-wrapper {
+        max-width: 400px;
+        height: 300px;
+    }
+    .flexslider .container h1 {
+        font-size: 1.8em;
+        margin-bottom: 0;
+    }
+    .flexslider .container p {
+        margin-bottom: 1.5em;
+    }
+    .flexslider .container .slider-testimonial {
+        margin-top: 1.5em;
+    }
+
+    .flex-direction-nav .flex-prev {
+        top: 86%;
+    }
+
     .flexslider #flex-index {
-        bottom: 5px;
+        bottom: 0px;
     }
 }
 
-@media screen and ( min-width: 375px) {
+/* @media screen and ( min-width: 375px) {
     .flexslider #flex-index {
         bottom: 10px;
     }
-}
+} */
 
-@media screen and ( min-width: 430px) {
+/* @media screen and ( min-width: 430px) {
     .flexslider #flex-index {
         bottom: 20px;
     }
-}
+} */
 
-@media screen and ( min-width: 500px) {
+/* @media screen and ( min-width: 500px) {
     .flexslider #flex-index {
         bottom: 18px;
     }
@@ -2198,15 +2266,15 @@ embed, iframe, object {
     .flex-direction-nav .flex-prev {
         top: 64%;
     }
-}
+} */
 
-@media screen and ( min-width: 575px) {
+/* @media screen and ( min-width: 575px) {
     .flexslider #flex-index {
         bottom: 26px;
     }
-}
+} */
 
-@media screen and ( min-width: 600px) {
+/* @media screen and ( min-width: 600px) {
     .flexslider .container {
         top: 12em;
     }
@@ -2219,21 +2287,22 @@ embed, iframe, object {
     .flex-direction-nav a {
         top: 91%;
     }
-}
+} */
 
+/*
 @media screen and ( min-width: 675px) {
     .flexslider #flex-index {
         bottom: 5px;
     }
-}
+} */
 
-@media screen and ( min-width: 730px) {
+/* @media screen and ( min-width: 730px) {
     .flexslider #flex-index {
         bottom: 11px;
     }
-}
+} */
 
-@media screen and ( min-width: 800px) {
+/* @media screen and ( min-width: 800px) {
     .flexslider .container {
         top: 14em;
     }
@@ -2248,8 +2317,9 @@ embed, iframe, object {
     .flexslider .btn {
         padding: 12px 25px
     }
-}
+} */
 
+/*
 @media screen and ( min-width: 850px) {
     .flex-direction-nav .flex-prev {
         top: 77%;
@@ -2333,7 +2403,7 @@ embed, iframe, object {
     .flexslider .btn {
         padding: 20px 25px;
     }
-}
+} */
 
 /*--------------------------------------------------------------
 15.2 News
